--- a/style.css
+++ b/style.css
@@ -99,7 +99,9 @@ header ul li a:hover{
     color: orange;
     font-size: 40px;
     text-align: center;
-    line-height: 1em;    
+    line-height: 1em;
+    -webkit-text-stroke: 1px black;
+    font-weight: 700;       
 }
 
 /* =======================
@@ -137,7 +139,7 @@ header ul li a:hover{
 
 h3{
     font-size: 40px;
-    font-weight: 280;
+    font-weight: 700;
     margin-bottom: 60px;   
 }
 
@@ -277,7 +279,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%;    
 }
 
 .teambx .member .imgbx img{
