--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ p{
     font-size: 16px;
     font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 /* =======================
@@ -511,23 +511,25 @@ p{
 }
 
 .container{
+    display: flex;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto;    
 }
 
 .imagen{
     width: 800px;
     height: 500px;
-    margin-top: 20px;   
+    margin-top: 20px;    
 }
 
 p{
-    padding-left: 15px;
+    padding-left: 30px;
     margin-top: 20px;
+    text-align: justify;
 }
 
 h5{
-    font-size: 25px;
+    font-size: 40px;
     text-align: center;
     margin-top: 150px;
 }
