--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 *{
@@ -6,15 +6,14 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-}
+    font-family: "Roboto", sans-serif;
+}*/
 
-body{
+/*body{
     min-height: 1000px;
-    font-family: sans-serif;
-      
-}
+}*/
 
-header{
+/*header{
     position: fixed;
     top: 0;
     left: 0;
@@ -102,13 +101,13 @@ header ul li a:hover{
     line-height: 1em;
     -webkit-text-stroke: 1px black;
     font-weight: 700;       
-}
+}*/
 
 /* =======================
    Sección Nosotros
    ======================= */
 
-.sec{
+/*.sec{
     background: #fff;
     padding: 100px;    
     display: flex;
@@ -152,14 +151,14 @@ p{
     font-weight: 300px;
     margin-bottom: 20px;
     font-weight: lighter;    
-}
+}/*
 
 /* =======================
    Sección Servicios
    ======================= */
 
 
-.services{
+/*.services{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
@@ -189,13 +188,13 @@ p{
     margin-bottom: 10px;
     text-transform: uppercase;
     font-weight: 700;
-}
+}/*
 
 /* =======================
    Logros
    ======================= */
 
-.stats{
+/*.stats{
     background: #000;
     padding-top: 40px;
     margin-top: 0;
@@ -225,13 +224,13 @@ p{
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
-}
+}*/
 
 /* =======================
    Noticias
    ======================= */
 
-.news{
+/*.news{
     position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -259,13 +258,13 @@ p{
     text-decoration: none;
     color: rgba(225, 255, 225, 0.4);
     text-transform: uppercase;
-}
+}*/
 
 /* =======================
    Team
    ======================= */
 
-.teambx{
+/*.teambx{
     position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -328,13 +327,13 @@ p{
     display: block;
     font-size: 15px;
     font-weight: 300;     
-}
+}*/
 
 /* =======================
    Contacto
    ======================= */
 
-.contact{
+/*.contact{
     background: #000;
     height: 980px;
 }
@@ -406,9 +405,9 @@ p{
     text-transform: uppercase;    
     cursor: pointer;
     font-weight: 500;
-}
+}*/
 
-@media (max-width: 991px){    
+/*@media (max-width: 991px){    
     .toggle{
         display: block;
         position: relative;
@@ -523,7 +522,7 @@ p{
         margin-bottom: 10px;
     }
     
-}
+}*/
 
 .container{    
     max-width: 1200px;
@@ -548,7 +547,7 @@ h5{
     margin-top: 150px;
 }
 
-.footer{
+/*.footer{
     background-color: #242628;
     padding: 80px 0;
 }
@@ -602,4 +601,4 @@ h5{
 
 .social-links a:hover{
     background-color: orange;
-}
+}*/
