--- a/sass/partials/_btn.scss
+++ b/sass/partials/_btn.scss
@@ -1,10 +1,13 @@
 .btn{
     padding: 10px 20px;
     border-radius: 30px;
-    background-color: orange;
-    color: white;
-    font-weight: 400;
-    cursor: pointer;
+    background-color: orange;    
+    font-weight: 400;    
     font-size: 14px;
     text-transform: uppercase;
+
+    &:hover{
+        background-color: rgb(211, 205, 205);        
+    }
+
 }
