--- a/sass/partials/_nosotros.scss
+++ b/sass/partials/_nosotros.scss
@@ -15,6 +15,14 @@
 .about-text{
     max-width: 600px;
     margin: 0 auto;
+
+    p{
+        font-size: 18px;
+        font-weight: 300px;
+        margin-bottom: 20px;
+        font-weight: lighter;
+        text-align: justify;    
+    }
 }    
 
 .btn2{
@@ -33,15 +41,10 @@
 h3{
     font-size: 40px;
     font-weight: 700;
-    margin-bottom: 60px;   
+    margin-bottom: 60px; 
 }
 
-p{
-    font-size: 18px;
-    font-weight: 300px;
-    margin-bottom: 20px;
-    font-weight: lighter;    
-}
+
              
     
 
