--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -16,7 +16,7 @@
         justify-content: center;
         align-items: center;
 
-        :hover{
+        &:hover{
             background: #2e2929;
         }
 
