--- a/sass/partials/_team.scss
+++ b/sass/partials/_team.scss
@@ -1,8 +1,8 @@
 .teambx{
-    position: relative;
+    /*position: relative;*/
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 30px;
     max-width: 100%;
     margin-top: 40px;
 
@@ -45,7 +45,7 @@
             transition: 0.2s;
             opacity: 0;
 
-            :hover{
+            &:hover{
                 opacity: 1;
             }
 
