--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -23,18 +23,18 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;             
-    }
-
-    li{
-        list-style: none;
-    }
-
-    a{
-        margin: 0 20px;
-        text-decoration: none;
-        color: white;
-        font-weight: 300;
-        font-size: 14px;        
+        padding: 10px 0px 10px 500px;        
+        margin: 0;
+        
+        li{
+            list-style: none;
+            
+            a{
+                margin: 0 20px;      
+                text-decoration: none;
+                color: white;
+                font-weight: 300;
+                font-size: 14px;
     }
 
     .sticky{
