--- a/sass/partials/_nosotros.scss
+++ b/sass/partials/_nosotros.scss
@@ -15,13 +15,13 @@
 .about-text{
     max-width: 600px;
     margin: 0 auto;
+    
 
     p{
         font-size: 18px;
         font-weight: 300px;
         margin-bottom: 20px;
-        font-weight: lighter;
-        text-align: justify;    
+        font-weight: lighter;   
     }
 }    
 
@@ -41,7 +41,8 @@
 h3{
     font-size: 40px;
     font-weight: 700;
-    margin-bottom: 60px; 
+    margin-bottom: 60px;
+    padding-top: 60px;
 }
 
 
