--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -10,7 +10,7 @@
 
 /*body{
     min-height: 1000px;
-}*/
+} */
 header {
   position: fixed;
   top: 0;
@@ -19,7 +19,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 60px;
+  padding: 20px 100px;
   z-index: 1000;
   transition: 0.6s;
   background: rgb(24, 25, 26);
@@ -31,16 +31,19 @@ header ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10px 0px 10px 500px;
+  margin: 0;
 }
-header li {
+header ul li {
   list-style: none;
 }
-header a {
+header ul li a {
   margin: 0 20px;
   text-decoration: none;
   color: white;
   font-weight: 300;
   font-size: 14px;
+  text-transform: uppercase;
 }
 header .sticky {
   padding: 5px 100px;
@@ -60,11 +63,12 @@ header ul li a:hover {
 .banner {
   width: 100%;
   min-height: 100vh;
-  background: url(/img/AC.jpg);
+  background-image: url(../img/AC.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .banner h2 {
   color: orange;
@@ -87,21 +91,24 @@ header ul li a:hover {
   background-color: rgb(211, 205, 205);
 }
 
-.stats {
+.sec-stats {
   background: #000;
-  padding-top: 40px;
-  margin-top: 0;
+  padding: 5px 10px 40px 10px;
+  justify-content: center;
+  align-items: center;
 }
-.stats h3,
-.stats p {
+.sec-stats h3,
+.sec-stats p {
   color: #fff;
+  text-align: center;
 }
 
 .statsbox {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 50px;
   max-width: 100%;
+  text-align: center;
 }
 .statsbox h2 {
   color: #fff;
@@ -120,15 +127,10 @@ header ul li a:hover {
   padding: 80px 0;
 }
 
-.footer-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.footer-links {
-  width: 25%;
-  padding: 0 15px;
-}
+/*.footer-links{
+    width: 100%;
+    margin-bottom: 10px;
+}*/
 .footer-links h4 {
   font-size: 20px;
   color: #fff;
@@ -137,20 +139,21 @@ header ul li a:hover {
   border-bottom: 2px solid orange;
   padding-bottom: 10px;
   display: inline-block;
-}
-.footer-links ul li a {
-  font-size: 18px;
-  text-decoration: none;
-  color: #fff;
-  display: block;
-  margin-bottom: 15px;
-  transition: all 0.3s ease;
-}
-.footer-links ul li a:hover {
-  color: #fff;
-  padding-left: 6px;
+  text-align: center;
 }
 
+/*.footer-links ul li a{
+    font-size: 18px;
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+}*/
+/*.footer-links ul li a:hover{
+    color: #fff;
+    padding-left: 6px;
+}*/
 .social-links a {
   display: inline-block;
   min-height: 40px;
@@ -165,6 +168,13 @@ header ul li a:hover {
 }
 .social-links a:hover {
   background-color: orange;
+}
+
+.footer-text {
+  color: white;
+  text-align: center;
+  font-weight: 200;
+  font-size: 14px;
 }
 
 .sec {
@@ -189,7 +199,6 @@ header ul li a:hover {
   font-weight: 300px;
   margin-bottom: 20px;
   font-weight: lighter;
-  text-align: justify;
 }
 
 .btn2 {
@@ -209,18 +218,19 @@ h3 {
   font-size: 40px;
   font-weight: 700;
   margin-bottom: 60px;
+  padding-top: 60px;
 }
 
 .services {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 30px;
   max-width: 100%;
   margin-top: 40px;
 }
 .services .box {
-  width: 300px;
-  margin: 0 auto;
+  width: 100px;
+  margin: 0 60px 60px 0;
   background: #fff;
   padding: 20px;
   box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.5);
@@ -243,7 +253,7 @@ h3 {
   position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-gap: 30px;
   max-width: 100%;
   margin-top: 40px;
 }
@@ -267,7 +277,7 @@ h3 {
 }
 
 .teambx {
-  /*position: relative;*/
+  position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 30px;
@@ -308,7 +318,7 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #000;
+  background: rgba(222, 137, 40, 0.444);
   transition: 0.2s;
   opacity: 0;
 }
@@ -327,8 +337,9 @@ h3 {
 
 .contact {
   background: #000;
-  height: 750px;
+  height: 800px;
   max-width: 100%;
+  padding-top: 50px;
 }
 .contact h3 {
   color: #fff;
@@ -389,8 +400,12 @@ h3 {
   cursor: pointer;
   font-weight: 500;
 }
+.contactform .row100 input[type=submit] input:hover {
+  background-color: orange;
+  color: #fff;
+}
 
-@media (max-width: 991px) {
+@media (max-width: 992px) {
   .toggle {
     display: block;
     position: relative;
@@ -432,7 +447,7 @@ h3 {
   }
   header ul {
     position: absolute;
-    top: 59px;
+    top: 70px;
     left: 0;
     width: 100%;
     height: 100vh;
@@ -446,42 +461,49 @@ h3 {
     visibility: visible;
     opacity: 1;
     display: block;
-    padding-top: 20px;
+    /*padding-top: 20px;*/
+    padding: 20px 20px 20px 20px;
   }
-  header.active ul li a {
+  header.active ul ul li a {
     display: inline-block;
-    margin: 10px 0;
+    margin: 20px 0;
     font-size: 15px;
   }
   .banner {
     background-position: center;
   }
-  .banner h2 {
+  h2 {
     font-size: 60px;
     padding: 0 50px;
   }
-  .sec {
-    padding: 100px 50px 50px 50px;
-  }
-  .services .box {
-    width: 100%;
-  }
-  .stats {
-    padding-top: 250px;
-  }
-  .row100 {
-    flex-direction: column;
-  }
-  .contactform .row100 .inputbx50,
-  .contactform .row100 .inputbx100 {
-    width: 100%;
-    margin: 0;
-  }
-  .footer-row {
-    text-align: center;
-  }
-  .footer-links {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+}
+.sec {
+  padding: 100px 50px 50px 50px;
+}
+
+.services .box {
+  width: 100%;
+}
+
+.stats {
+  padding-top: 250px;
+}
+
+.row100 {
+  flex-direction: column;
+}
+
+.contactform .row100 .inputbx50,
+.contactform .row100 .inputbx100 {
+  width: 100%;
+  margin: 0;
+}
+
+.footer-row {
+  text-align: center;
+}
+
+.footer-links {
+  width: 100%;
+  margin-bottom: 10px;
 }/*# sourceMappingURL=estilos.css.map */
