--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -3,39 +3,35 @@
     padding: 80px 0;
 }
 
-.footer-row{
-    display: flex;
-    flex-wrap: wrap;    
+/*.footer-links{
+    width: 100%;
+    margin-bottom: 10px;
+}*/
+
+.footer-links h4{
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 25px;
+    font-weight: 500;
+    border-bottom: 2px solid orange;
+    padding-bottom: 10px;
+    display: inline-block;
+    text-align: center;
 }
 
-.footer-links{
-    width: 25%;
-    padding: 0 15px;
+/*.footer-links ul li a{
+    font-size: 18px;
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+}*/
 
-    h4{
-        font-size: 20px;
-        color: #fff;
-        margin-bottom: 25px;
-        font-weight: 500;
-        border-bottom: 2px solid orange;
-        padding-bottom: 10px;
-        display: inline-block;
-    }
-
-    ul li a{
-        font-size: 18px;
-        text-decoration: none;
-        color: #fff;
-        display: block;
-        margin-bottom: 15px;
-        transition: all .3s ease;
-
-        &:hover{
-            color: #fff;
-            padding-left: 6px;
-        }
-    }    
-}
+/*.footer-links ul li a:hover{
+    color: #fff;
+    padding-left: 6px;
+}*/  
 
 .social-links a{
     display: inline-block;
@@ -53,7 +49,10 @@
         background-color: orange;
     }
 }
- 
 
-
-
+.footer-text{
+    color: white;
+    text-align: center;
+    font-weight: 200;
+    font-size: 14px;
+}
