--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,6 +1,6 @@
 /*body{
     min-height: 1000px;
-}*/    
+} */  
 
 header{
     position: fixed;
@@ -8,21 +8,21 @@ header{
     left: 0;
     width: 100%;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 60px;
+    padding: 20px 100px;
     z-index: 1000;
     transition: 0.6s;
-    background: rgb(24, 25, 26);
+    background: rgb(24, 25, 26);    
 
     .logo{
-        height: 60px;
+        height: 60px;        
     }
 
     ul{
         display: flex;
         justify-content: center;
-        align-items: center;             
+        align-items: center;
         padding: 10px 0px 10px 500px;        
         margin: 0;
         
@@ -35,7 +35,12 @@ header{
                 color: white;
                 font-weight: 300;
                 font-size: 14px;
-    }
+                text-transform: uppercase;                
+            }
+        }        
+    }    
+
+    
 
     .sticky{
         padding: 5px 100px;
@@ -59,11 +64,12 @@ header{
 .banner{
     width: 100%;
     min-height: 100vh;
-    background: url(/img/AC.jpg);
+    background-image: url(../img/AC.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
     background-size: cover;
+    background-repeat: no-repeat;
 
     h2{
         color: orange;
