--- a/sass/partials/_logros.scss
+++ b/sass/partials/_logros.scss
@@ -1,19 +1,23 @@
-.stats{
+.sec-stats{
     background: #000;
-    padding-top: 40px;
-    margin-top: 0;
-
+    padding: 5px 10px 40px 10px;
+    justify-content: center;
+    align-items: center;
+    
     h3,
     p{
         color: #fff;
+        text-align: center;
     }
 }
 
 .statsbox{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 50px;
     max-width: 100%;
+    text-align: center;
+    
 
     h2{
         color: #fff;
