--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 991px){    
+@media (max-width: 992px){    
     .toggle{
         display: block;
         position: relative;
@@ -47,7 +47,7 @@
 
     header ul{
         position: absolute;
-        top: 59px;
+        top: 70px;
         left: 0;
         width: 100%;
         height: 100vh;
@@ -55,33 +55,34 @@
         overflow: auto;
         visibility: hidden;
         background: #323337;
-        opacity: 0;
-        
-                    
+        opacity: 0;                   
     } 
             
     header.active ul{
         visibility: visible;
         opacity: 1;
         display: block;
-        padding-top: 20px;
-    }
+        /*padding-top: 20px;*/
+        padding: 20px 20px 20px 20px;
 
-    header.active ul li a{
-        display: inline-block;
-        margin: 10px 0;
-        font-size: 15px;
-    }   
-    
+        ul li a{
+            display: inline-block;
+            margin: 20px 0;
+            font-size: 15px;
+        }
+        
+    }      
+       
     .banner{
-        background-position: center;        
+        background-position: center;
+    }    
+        
+    h2{
+            font-size: 60px;
+            padding: 0 50px;
     }
-
-    .banner h2{
-        font-size: 60px;
-        padding: 0 50px;
-    }
-
+}
+    
     .sec{
         padding: 100px 50px 50px 50px;
     }
@@ -111,6 +112,4 @@
     .footer-links{
         width: 100%;
         margin-bottom: 10px;
-    }
-    
-}
+    }  
