--- a/sass/partials/_servicios.scss
+++ b/sass/partials/_servicios.scss
@@ -1,19 +1,20 @@
-.services{
+.services{    
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
     max-width: 100%;
     margin-top: 40px;
 
     .box{
-        width: 300px;
-        margin: 0 auto;
+        width: 100px;
+        margin: 0 60px 60px 0;
         background: #fff;
         padding: 20px;
         box-shadow: 0px 20px 25px rgba(0,0,0,0.5);
 
         .iconbx{
-            margin-top: 25px;   
+            margin-top: 25px;            
+        
             
             img{
                 max-width: 70px;
