--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -60,19 +60,19 @@ header{
 .banner{
     width: 100%;
     min-height: 100vh;
-    background-image: url(../img/AC.jpg);
+    background-image: url(../img/ac.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
     background-size: cover;
     background-repeat: no-repeat;
 
-    h2{
+    h1{
         color: orange;
         font-size: 40px;
         text-align: center;
         line-height: 1em;
         -webkit-text-stroke: 1px black;
-        font-weight: 700;       
+        font-weight: 700;
     }
 }
