--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -60,7 +60,7 @@ header{
 .banner{
     width: 100%;
     min-height: 100vh;
-    background-image: url(../img/ac.jpg);
+    background-image: url(/img/ac.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
